Moving UI to PoC project

--- a/API/SafeDesk365.Api/appsettings.json
+++ b/API/SafeDesk365.Api/appsettings.json
@@ -9,7 +9,9 @@
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "zxqg4.onmicrosoft.com",
     "TenantId": "a358c12a-fbfe-4272-a925-5c200c969a0b",
-    "ClientId": "cd999c9a-6a4f-4187-985f-7afac488cd2d"
+    "ClientId": "cd999c9a-6a4f-4187-985f-7afac488cd2d",
+    "CallbackPath": "/signin-oidc",
+    "SignedOutCallbackPath ": "/signout-callback-oidc"
   },
   "AllowedHosts": "*",
   "PnPCore": {
