--- a/API/SafeDesk365.DesignPoCWebApp/SafeDesk365.DesignPoCWebApp.csproj
+++ b/API/SafeDesk365.DesignPoCWebApp/SafeDesk365.DesignPoCWebApp.csproj
@@ -7,6 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.0.0-preview.5" />
+    <PackageReference Include="Microsoft.Kiota.Authentication.Azure" Version="1.0.0-preview.2" />
+    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.0.0-preview.6" />
     <PackageReference Include="Radzen.Blazor" Version="3.17.3" />
   </ItemGroup>
 
