--- a/API/SafeDesk365.TestConsole/SafeDesk365.TestConsole/SafeDesk365.TestConsole.csproj
+++ b/API/SafeDesk365.TestConsole/SafeDesk365.TestConsole/SafeDesk365.TestConsole.csproj
@@ -8,8 +8,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Kiota.Authentication.Azure" Version="1.0.0-preview.1" />
-    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.0.0-preview.5" />
+    <PackageReference Include="Azure.Identity" Version="1.6.0" />
+    <PackageReference Include="Microsoft.Kiota.Authentication.Azure" Version="1.0.0-preview.2" />
+    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.0.0-preview.6" />
   </ItemGroup>
 
   <ItemGroup>
