--- a/TeamsTab/SafeDesk365.TeamsTab/appsettings.Development.json
+++ b/TeamsTab/SafeDesk365.TeamsTab/appsettings.Development.json
@@ -6,19 +6,19 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
-  ,
-  "CLIENT_ID": "20169858-d05f-469a-8137-c1951f50c609",
-  "IDENTIFIER_URI": "api://localhost/20169858-d05f-469a-8137-c1951f50c609",
-  "TAB_APP_ENDPOINT": "https://localhost:44302/",
-  "OAUTH_AUTHORITY": "https://login.microsoftonline.com/a358c12a-fbfe-4272-a925-5c200c969a0b",
-  "AAD_METADATA_ADDRESS": "https://login.microsoftonline.com/a358c12a-fbfe-4272-a925-5c200c969a0b/v2.0/.well-known/openid-configuration",
-  "ALLOWED_APP_IDS": "1fec8e78-bce4-4aaf-ab1b-5451cc387264;5e3ce6c0-2b1f-4285-8d4b-75ee78787346",
+  "AllowedHosts": "*",
+  "DetailedErrors": true,
   "TeamsFx": {
     "Authentication": {
       "ClientId": "20169858-d05f-469a-8137-c1951f50c609",
-      "SimpleAuthEndpoint": "https://localhost:44302/",
-      "InitiateLoginEndpoint": "https://localhost:44302/auth-start.html"
+      "InitiateLoginEndpoint": "https://localhost:44302/auth-start.html",
+      "OAuthAuthority": "https://login.microsoftonline.com/a358c12a-fbfe-4272-a925-5c200c969a0b"
     }
+  },
+  "SafeDesk365": {
+    "TenantId": "a358c12a-fbfe-4272-a925-5c200c969a0b",
+    "AllowedHost": "safedesk365-pro.azurewebsites.net",
+    "ApiScope": "cd999c9a-6a4f-4187-985f-7afac488cd2d/.default",
+    "ApiBaseUrl": "https://safedesk365-pro.azurewebsites.net/"
   }
 }
